LIBWEB-6490 Fix button text alignment in action area
- Center button text to improve visual consistency

https://umd-dit.atlassian.net/browse/LIBWEB-6490

--- a/components/umd-libraries-fcrepo-details/umd-libraries-fcrepo-details.css
+++ b/components/umd-libraries-fcrepo-details/umd-libraries-fcrepo-details.css
@@ -21,7 +21,8 @@
 }
 
 /* center the text in the link */
-.umd-lib.fcrepo-details .action-area .button-group a {
+.umd-lib.fcrepo-details .action-area .button-group a,
+.umd-lib.fcrepo-details .action-area .button-group button {
   align-items: center;
   justify-content: center;
   text-align: center;
